# coolamqp

./: .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST  MANIFEST.in  README.md  Vagrantfile  build.sh  compile_definitions.py  docker-compose.yml  requirements.txt  setup.cfg  setup.py  test.py
compile_definitions/: __main__.py  utilities.py  xml_fields.py  xml_tags.py
coolamqp/: README.md  __init__.py  argumentify.py  cluster.py  events.py  exceptions.py  futures.py  handler.py  messages.py  objects.py  orders.py  scaffold.py  tracing.py  utils.py
coolamqp/attaches/: __init__.py  agroup.py  channeler.py  consumer.py  declarer.py  publisher.py  utils.py
coolamqp/backends/: __init__.py  base.py  coolamqp.py  pyamqp.py
coolamqp/clustering/: __init__.py  cluster.py  events.py  single.py
coolamqp/connection/: __init__.py  connecting.py  consumer.py  definition.py  orders.py  state.py
coolamqp/framing/: __init__.py  base.py  connector.py  definitions.py  extensions.py  field_table.py  frames.py  order.py  serialization.py
coolamqp/framing/compilation/: __init__.py  compile_definitions.py  content_property.py  textcode_fields.py  utilities.py  xml_fields.py  xml_tags.py
coolamqp/framing/frames/: __init__.py  base.py  base_definitions.py  definitions.py  frames.py  human.py  machine.py
coolamqp/framing/frames/compilation/: compile_definitions.py  utilities.py
coolamqp/framing/react/: __init__.py
coolamqp/framing/streams/: __init__.py  exceptions.py  receiver.py  recv_formatter.py  send_operator.py  uplink.py
coolamqp/handshake/: __init__.py
coolamqp/persistence/: __init__.py
coolamqp/state/: __init__.py  orders.py  state.py
coolamqp/uplink/: __init__.py  authentication.py  factory.py  handshake.py  heartbeat.py  order.py  reactor.py  reader_thread.py  recv_framer.py  send_framer.py  transcript.py  uplink.py  watchman.py
coolamqp/uplink/commander/: __init__.py
coolamqp/uplink/connection/: __init__.py  connection.py  recv_framer.py  send_framer.py  states.py  watches.py
coolamqp/uplink/frames/: __init__.py  base_definitions.py  definitions.py  frames.py
coolamqp/uplink/listener/: __init__.py  base_listener.py  epoll_listener.py  select_listener.py  socket.py  thread.py
coolamqp/uplink/streams/: __init__.py  reader_thread.py  recv_formatter.py  send_operator.py  watchman.py
docs/: Makefile  advanced.rst  basics.rst  casefile-0001  caveats.md  caveats.rst  cluster.rst  conf.py  frames.rst  how-to-guide.rst  index.rst  make.bat  reference.rst  requirements.txt  streams.rst  tracing.rst  tutorial.md  tutorial.rst  tutorials.rst  whatsnew.rst
docs/coolamqp/: cluster.rst
docs/tutorials/: send_and_receive.rst
examples/: send_to_myself.py
resources/: LICENSE.md  amqp0-9-1.extended.xml  amqp0-9-1.xml
stress_tests/: README.md  __main__.py  client.py  requirements.txt  server.py  settings.py
stress_tests/client/: __init__.py
stress_tests/server/: __init__.py
tests/: Dockerfile  README.md  __init__.py  run.py  test_basics.py  test_cluster.py  test_exceptions.py  test_failures.py  test_framing.py  test_noack.py  test_objects.py  test_performance.py  travis_build.sh  travis_test.sh  utils.py
tests/test_attaches/: test_consumer.py  test_declarer.py  test_utils.py
tests/test_clustering/: __init__.py  test_a.py  test_double.py  test_exchanges.py  test_log_frames.py  test_streams.py  test_things.py  test_topic_exchanges.py
tests/test_connection/: __init__.py  test_state.py
tests/test_framing/: test_compilation.py  test_field_table.py
tests/test_framing/test_definitions/: test_cpl.py  test_frames.py
tests/test_uplink/: test_basic.py
utils/: compdefs.py  getp.py
(+2 files in other folders)
