[metadata]
description-file = README.md
name = CoolAMQP
version = 0.93
license = MIT License
classifiers = 
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX :: Linux
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
description = Very fast pure-Python AMQP client
author = DMS Serwis s.c.
author_email = piotrm@dms-serwis.pl
url = https://github.com/smok-serwis/coolamqp
platforms =
    posix

[pycodestyle]
max-line-length=80

[bdist_wheel]
universal=1

[nosetests]
verbosity=1
detailed-errors=1
with-coverage=1

[isort]
add_imports =
    from __future__ import absolute_import
    from __future__ import division
    from __future__ import print_function
    from __future__ import unicode_literals
