[metadata]
name = CoolAMQP
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license = MIT License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
description = Very fast pure-Python AMQP client
author = Piotr Maślanka
author_email = pmaslanka@smok.co
url = https://github.com/smok-serwis/coolamqp
platforms =
    posix
    win32

[pycodestyle]
max-line-length = 80

[bdist_wheel]
universal = 1

[isort]
add_imports =
    from __future__ import absolute_import
    from __future__ import division
    from __future__ import print_function
    from __future__ import unicode_literals
